textarea spacing fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1008,8 +1008,6 @@ hr.line.align-right {
 	color: @font-swatch5-color;
 	text-indent: 8px;
 	padding-top: 14px;
-	margin-top: 6px;
-	margin-bottom: 20px;
 	resize: none;
 	-webkit-border-radius: 3px;
 	-moz-border-radius: 3px;
